website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app: website
        tier: backend
        track: stable
    spec:
      containers:
        - name: website
          image: "laurosg87/cdn-react-web:latest"
          ports:
            - name: http
              containerPort: 3000 
          
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: ingress-nginx
  labels:
    app:  website
spec:
  type: ClusterIP
  ports:
      - protocol: TCP
        port: 3000
        targetPort: 3000
  selector:
    app: website
  ipFamilies:
    - IPv4
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  namespace: ingress-nginx
  labels:
    app:  website
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /()(.*)
        pathType: Prefix
        backend:
          service:
            name: website
            port:
              number: 3000
---
